name:                ens-search
version:             0.1.0.0
synopsis:            Search for soon-to-be-available Ethereum Name Service (ENS) names
homepage:            https://github.com/michaelsproul/ens-search#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Sproul
maintainer:          micsproul@gmail.com
copyright:           2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ENS
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5, cryptonite, bytestring, memory, time
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable ens-search
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ens-search
                     , bytestring
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite ens-search-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ens-search
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaelsproul/ens-search
